package com.tetras;

public interface ComposantRequeteHttp {
    public String afficher();
}
